--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "babel-jest": "^30.0.4",
     "jest": "^30.0.4"
   },
   "scripts": {
     "test": "jest"
   }
-
 }
